Update to versions catalog and newer dependencies (#48)